--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,8 @@
     "another-rest-client": "^0.3.2",
     "bootstrap": "^3.3.7",
     "jquery": "^3.2.1",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "select2": "^4.0.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
